homelab-gitops/apps/media/base/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radarr.thundertest.org
      secretName: mealie-tls
  rules:
    - host: radarr.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
